--- a/home.html
+++ b/home.html
@@ -1,10 +1,20 @@
 <html>
     <head>
         <link href="style.css" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="appPosts.js"></script>
     </head>
 
-    <body>
-        <h1>Does this work? </h1>
+    <body class="content">
+        <div id="preview">
+            <img id="user-img" src="#" alt="your image">
+            <pre id="user-description"></pre>
+            <p id="preview-url"><p>
+        </div>
+
+        <input type="file" onchange="readImageURL(this);">
+        <p>Description:</p>
+        <textarea class="description" placeholder="Description"></textarea>
+        <p>URL: <input type="url" class="site-url"></p>
     </body>
 </html>
