--- a/home.html
+++ b/home.html
@@ -6,6 +6,28 @@
     </head>
 
     <body class="content">
+        <!-- FACEBOOK SDK -->
+    <script>
+        window.fbAsyncInit = function() {
+            FB.init({
+            appId            : '1700142820294035',
+            autoLogAppEvents : true,
+            xfbml            : true,
+            version          : 'v2.9'
+            });
+            FB.AppEvents.logPageView();
+        };
+
+        (function(d, s, id){
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {return;}
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+        <!-- End FB SDK -->
+
         <div id="preview">
             <img id="user-img" src="#" alt="your image">
             <pre id="user-description"></pre>
@@ -16,5 +38,13 @@
         <p>Description:</p>
         <textarea class="description" placeholder="Description"></textarea>
         <p>URL: <input type="url" class="site-url"></p>
+
+        <!--
+            EXPERIMENTAL FACEBOOK TESTS
+        -->
+        <button class="fb">Facebook</button>
+        <!--
+
+        -->    
     </body>
 </html>
