--- a/home.html
+++ b/home.html
@@ -7,24 +7,30 @@
     </head>
 
     <body class="container">
-        <div id="extra-bg">
-            <div class="content">
-                <div id="preview">
-                    <img id="user-img" src="#" alt="your image">
-                    <p id="user-description"></p>
-                    <p id="preview-url"><p>
+        <div class="content">
+            <!-- social media post form -->
+            <form class="media-input-form">
+                <nav>
+                    <ul class="social-media-btns">
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Tumblr</a></li>
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Pinterest</a></li>
+                    </ul>
+                </nav>
+                <div class="media-input-box">
+                    <label class="block test">Description</label>
+                    <textarea class="description"></textarea>
+                    <p class="block test">URL: <input type="url" class="site-url"></p>
+                    <input type="file" onchange="readImageURL(this);">
                 </div>
-                
-                <div id="social-media-post">
-                    <div class="media-input-box">
-                        <div id="description-box">
-                            <p>Description</p>
-                            <textarea class="description"></textarea>
-                        </div>
-                        <p>URL: <input type="url" class="site-url"></p>
-                        <input type="file" onchange="readImageURL(this);">
-                    </div>
-                </div>
+            </form>
+
+            <!-- preview box -->
+            <div id="preview">
+                <img id="user-img" src="#" alt="your image">
+                <p id="user-description"></p>
+                <p id="preview-url"><p>
             </div>
         </div>
     </body>
