--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <link href="reset.css" rel="stylesheet">
-        <link href="style.css" rel="stylesheet">
+        <link href="styles/reset.css" rel="stylesheet">
+        <link href="styles/style.css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="scripts/appPosts.js"></script>
     </head>
