Successfully transfers an image to the server and saves it as a jpg. Need to fix the getBase64Image() code so that the canvas width and height generate their data from the actual image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <textarea class="description blue-outline"></textarea>
                     <p class="block form-text">URL: <input type="url" class="site-url blue-outline"></p>
                     <input id="user-file" type="file" onchange="readImageURL(this);"/>
-                    <button type="submit">Submit</button>
+                    <button id="social-post-btn" type="submit">Submit</button>
                 </div>
             </form>
 
